--- a/client/style.css
+++ b/client/style.css
@@ -7,7 +7,7 @@
     color: black;
 }
 .is-today {
-    color: #4a148c !important;
+    color: black !important;
 
 }
 .datepicker-table td.is-selected {
@@ -20,3 +20,24 @@
 .dropdown-content li>a, .dropdown-content li>span{
     color: black;
 }    
+
+.timepicker-digital-display {
+    background-color: #4a148c
+}
+
+.timepicker-close {
+    color: #4a148c
+}
+
+.timepicker-canvas-bg,
+.timepicker-canvas-bearing {
+    fill: #4a148c !important
+}
+
+.timepicker-canvas line {
+    stroke: #4a148c
+}
+
+.timepicker-tick:hover {
+    background-color: #4a148c
+}
